--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@ streamlit-local-storage
 asyncio
 aiohttp>=3.8.0
 
+# HTTP Client Support for Dual Mode API
+httpx>=0.24.0
+requests>=2.28.0
+
 # Data Processing
 pandas>=2.0.0
 numpy>=1.24.0
@@ -23,4 +27,8 @@ plotly>=5.15.0
 streamlit-option-menu>=0.3.6
 
 # Development
-python-dotenv>=1.0.0 
+python-dotenv>=1.0.0
+
+# Testing
+pytest>=7.0.0
+pytest-asyncio>=0.21.0 
