--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,8 @@
-# Core Dependencies  
+# Core Dependencies
 streamlit>=1.28.0
-google-genai
-streamlit-local-storage
-
-# Async Support
-asyncio
-aiohttp>=3.8.0
-
-# HTTP Client Support for Dual Mode API
-httpx>=0.24.0
+genai
 requests>=2.28.0
+streamlit-local-storage
 
 # Data Processing
 pandas>=2.0.0
