--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-# Core Dependencies
+# Core Dependencies  
 streamlit>=1.28.0
-genai
-requests>=2.28.0
+google-genai
 streamlit-local-storage
+
+# Async Support
+asyncio
+aiohttp>=3.8.0
 
 # Data Processing
 pandas>=2.0.0
@@ -20,8 +23,4 @@ plotly>=5.15.0
 streamlit-option-menu>=0.3.6
 
 # Development
-python-dotenv>=1.0.0
-
-# Testing
-pytest>=7.0.0
-pytest-asyncio>=0.21.0 
+python-dotenv>=1.0.0 
